fix: animation pause on mobile (#3219)

--- a/packages/datasheet/src/index.less
+++ b/packages/datasheet/src/index.less
@@ -62,11 +62,15 @@ code {
   }
 
   .script-loading-logo-text-img {
-    display: none;
+    opacity: 0 !important;
   }
 
   .script-loading-wrap-finished .script-loading-logo-img {
-    transform: none !important
+    transform: translateX(0) !important;
+  }
+
+  .script-loading-wrap-finished .script-loading-logo-text-img {
+    transform: translateX(26px) !important
   }
 }
 
